Added functions for mime types.

--- a/configure.ac
+++ b/configure.ac
@@ -9,8 +9,8 @@ dnlAC_C_INLINE
 AC_HEADER_STDC
 
 
-CFLAGS=" -Wall -pedantic -g -ggdb -pg -O0 -D_DEBUG "
-dnl CFLAGS=" -Wall -pedantic -O3 "
+CFLAGS=" -Wall -pedantic -g -ggdb -pg -O0 -D_DEBUG -I../../libcollections/src/ -lcollections"
+dnl CFLAGS=" -Wall -pedantic -O3  -lcollections"
 LDFLAGS=""
 
 AC_PROG_RANLIB
