--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,12 +1,14 @@
-#AM_CFLAGS = $(DEPS_CFLAGS) -I ../src/ -L ../src/ -L .
-AM_CFLAGS = -Wall -pedantic -g -ggdb -pg -O0 -D_DEBUG -D_XOPEN_SOURCE -D_XOPEN_SOURCE_EXTENDED -I ../src/ -L ../src/ -L . 
-LDADD     = -lutility
+#AM_CFLAGS = $(DEPS_CFLAGS) -I../src/ -L../src/ -L.
+AM_CFLAGS = -std=gnu99 -Wall -pedantic -g -ggdb -O0 -DDEBUG -I../src/ -L../src/ -L. -L../lib/ -L/usr/local/lib
+LDADD     = -lutility -lm -lcollections
 
 
 
 bin_PROGRAMS = \
 test-exceptions \
+test-huffman \
 test-scrambling 
 
 test_exceptions_SOURCES    = test-exceptions.c
+test_huffman_SOURCES       = test-huffman.c
 test_scrambling_SOURCES    = test-scrambling.c
