Added Huffman compression.

--- a/configure.ac
+++ b/configure.ac
@@ -1,26 +1,30 @@
-AC_INIT([libutility], [0.1], [manvscode@gmail.com], [libutility], [http://www.shrewdcreative.com/])
+AC_INIT([libutility], [0.1], [manvscode@gmail.com], [libutility], [http://www.manvscode.com/])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 
-AM_SILENT_RULES([yes])
+AM_SILENT_RULES([no])
+AC_CONFIG_HEADERS([src/libutility-config.h])
+
 AC_PROG_CC
 AC_PROG_CC_C99
-dnlAC_C_INLINE
-
+AC_C_INLINE
 AC_HEADER_STDC
 
+AH_TOP([
+#ifndef _LIBUTILITY_CONFIG_H_
+#define _LIBUTILITY_CONFIG_H_
+])
+AH_BOTTOM([
+#endif /* _LIBUTILITY_CONFIG_H_ */
+])
 
-CFLAGS="-std=gnu99 -Wall -pedantic -g -ggdb -pg -O0 -D_DEBUG -I../../libcollections/src/ -lcollections"
-dnl CFLAGS=" -Wall -pedantic -O3  -lcollections"
-LDFLAGS=""
+
+#CFLAGS="-std=gnu99 -Wall -pedantic -g -ggdb -O0 -DDEBUG -I/usr/local/include/"
+CFLAGS=" -Wall -pedantic -O3  -lcollections"
+LDFLAGS="-lcollections -lm"
 
 LT_INIT([shared static])
-
 AC_PROG_LIBTOOL
 AM_PROG_LIBTOOL
-AC_PROG_RANLIB
-
-
-dnl AC_CONFIG_HEADERS([src/config.h])
 
 AC_PROG_INSTALL
 
