--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,13 +3,25 @@
 # Add new files in alphabetical order. Thanks.
 #libutility_a_SOURCES = bytes.c crash.c exceptions.c fileio.c mime.c
 
-source = bytes.c crash.c exceptions.c fileio.c huffman.c mime.c
-headers = exceptions.h mime.h utility.h
+libutility_sources = \
+huffman.c \
+bytes.c \
+crash.c \
+exceptions.c \
+fileio.c \
+mime.c \
+console.c
+
+libutility_headers = \
+exceptions.h \
+mime.h \
+utility.h
 
 library_includedir = $(includedir)/libutility/
-library_include_HEADERS = $(headers)
+library_include_HEADERS = $(libutility_headers)
 
 # Library
-lib_LTLIBRARIES = $(top_builddir)/lib/libutility.la 
-__top_builddir__lib_libutility_la_SOURCES = $(source)
+lib_LTLIBRARIES                           = $(top_builddir)/lib/libutility.la
+__top_builddir__lib_libutility_la_SOURCES = $(libutility_sources)
+#__top_builddir__lib_libutility_la_LIBADD  = -lcollections
 
