--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,14 +1,13 @@
 #AM_CFLAGS = $(DEPS_CFLAGS) -I../src/ -L../src/ -L.
-AM_CFLAGS = -std=gnu99 -Wall -pedantic -g -ggdb -O0 -DDEBUG -I../src/ -L../src/ -L. -L../lib/ -L/usr/local/lib
-LDADD     = -lutility -lm -lcollections
 
-
+AM_CFLAGS = -std=gnu99 -g -ggdb -O0 -I$(top_builddir)/src/ -L$(top_builddir)/src/ -L$(top_builddir)/lib/.libs/ -L$(top_builddir)/lib/  -I/usr/local/include/libutility -L/usr/local/lib
+LDADD     = $(top_builddir)/lib/libutility.la
 
 bin_PROGRAMS = \
-test-exceptions \
-test-huffman \
-test-scrambling 
+$(top_builddir)/bin/test-exceptions \
+$(top_builddir)/bin/test-scrambling \
+$(top_builddir)/bin/test-huffman 
 
-test_exceptions_SOURCES    = test-exceptions.c
-test_huffman_SOURCES       = test-huffman.c
-test_scrambling_SOURCES    = test-scrambling.c
+__top_builddir__bin_test_exceptions_SOURCES  = test-exceptions.c
+__top_builddir__bin_test_scrambling_SOURCES  = test-scrambling.c
+__top_builddir__bin_test_huffman_SOURCES     = test-huffman.c
