--- a/configure.ac
+++ b/configure.ac
@@ -20,8 +20,8 @@ AH_BOTTOM([
 # If big endian define WORDS_BIGENDIAN
 AC_C_BIGENDIAN
 
-#CFLAGS="-std=gnu99 -Wall -pedantic -g -ggdb -O0 -DDEBUG -I/usr/local/include/"
-CFLAGS=" -Wall -pedantic -O3  -lcollections"
+CFLAGS="-std=gnu99 -Wall -pedantic -g -ggdb -O0 -DDEBUG -I/usr/local/include/"
+#CFLAGS=" -Wall -pedantic -O3  -lcollections"
 LDFLAGS="-lcollections -lm"
 
 LT_INIT([shared static])
