--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -16,9 +16,6 @@
 
 #noinst_LIBRARIES = libutility.a
 
-# Add new files in alphabetical order. Thanks.
-#libutility_a_SOURCES = bytes.c crash.c exceptions.c fileio.c mime.c
-
 
 VPATH = @srcdir@
 am__is_gnu_make = test -n '$(MAKEFILE_LIST)' && test -n '$(MAKELEVEL)'
@@ -129,7 +126,7 @@ LTLIBRARIES = $(lib_LTLIBRARIES)
 __top_builddir__lib_libutility_la_LIBADD =
 am__objects_1 = huffman.lo bytes.lo caesar.lo checksums.lo crash.lo \
 	endianess.lo exceptions.lo fileio.lo fsm.lo mime.lo \
-	observers.lo strings.lo console.lo
+	observers.lo strings.lo console.lo time.lo
 am___top_builddir__lib_libutility_la_OBJECTS = $(am__objects_1)
 __top_builddir__lib_libutility_la_OBJECTS =  \
 	$(am___top_builddir__lib_libutility_la_OBJECTS)
@@ -315,6 +312,8 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
+
+# Add new files in alphabetical order. Thanks.
 libutility_sources = \
 huffman.c \
 bytes.c \
@@ -328,7 +327,8 @@ fsm.c \
 mime.c \
 observers.c \
 strings.c \
-console.c
+console.c \
+time.c 
 
 libutility_headers = \
 exceptions.h \
@@ -452,6 +452,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mime.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/observers.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/strings.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/time.Plo@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
