--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -124,9 +124,9 @@ am__installdirs = "$(DESTDIR)$(libdir)" \
 	"$(DESTDIR)$(library_includedir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 __top_builddir__lib_libutility_la_LIBADD =
-am__objects_1 = huffman.lo bytes.lo caesar.lo checksums.lo crash.lo \
-	endianess.lo exceptions.lo fileio.lo fsm.lo mime.lo \
-	observers.lo strings.lo console.lo time.lo
+am__objects_1 = bytes.lo caesar.lo checksums.lo endianess.lo \
+	exceptions.lo fileio.lo huffman.lo strings.lo console.lo \
+	time.lo
 am___top_builddir__lib_libutility_la_OBJECTS = $(am__objects_1)
 __top_builddir__lib_libutility_la_OBJECTS =  \
 	$(am___top_builddir__lib_libutility_la_OBJECTS)
@@ -315,24 +315,19 @@ top_srcdir = @top_srcdir@
 
 # Add new files in alphabetical order. Thanks.
 libutility_sources = \
-huffman.c \
 bytes.c \
 caesar.c \
 checksums.c \
-crash.c \
 endianess.c \
 exceptions.c \
 fileio.c \
-fsm.c \
-mime.c \
-observers.c \
+huffman.c \
 strings.c \
 console.c \
 time.c 
 
 libutility_headers = \
 exceptions.h \
-mime.h \
 utility.h
 
 library_includedir = $(includedir)/libutility/
@@ -443,14 +438,10 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/caesar.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/checksums.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/console.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/crash.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/endianess.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/exceptions.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fileio.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fsm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/huffman.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mime.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/observers.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/strings.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/time.Plo@am__quote@
 
