--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -3,12 +3,15 @@ AM_CFLAGS = -std=c99 -g -ggdb -O0 -I$(top_builddir)/src/  -I/usr/local/include/l
 #LDFLAGS   = -lm $(top_builddir)/lib/.libs/libutility.a
 
 bin_PROGRAMS = \
+$(top_builddir)/bin/test-bytes \
 $(top_builddir)/bin/test-exceptions \
 $(top_builddir)/bin/test-scrambling \
 $(top_builddir)/bin/test-file \
 $(top_builddir)/bin/test-huffman \
 $(top_builddir)/bin/test-time
 
+__top_builddir__bin_test_bytes_SOURCES       = test-bytes.c
+__top_builddir__bin_test_bytes_LDFLAGS       = -lm $(top_builddir)/lib/.libs/libutility.a
 __top_builddir__bin_test_exceptions_SOURCES  = test-exceptions.c
 __top_builddir__bin_test_exceptions_LDFLAGS  = -lm $(top_builddir)/lib/.libs/libutility.a
 __top_builddir__bin_test_scrambling_SOURCES  = test-scrambling.c
