--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,23 +1,22 @@
 #noinst_LIBRARIES = libutility.a
 
 # Add new files in alphabetical order. Thanks.
-libutility_sources = \
-bytes.c \
-caesar.c \
-checksums.c \
-endianess.c \
-exceptions.c \
-fileio.c \
-fileio-unix.c \
-huffman.c \
-strings.c \
-console.c \
-time.c \
-time-unix.c
+libutility_sources = bytes.c \
+					 caesar.c \
+					 checksums.c \
+					 endianess.c \
+					 exceptions.c \
+					 fileio.c \
+					 fileio-unix.c \
+					 huffman.c \
+					 strings.c \
+					 console.c \
+					 time.c \
+					 time-unix.c \
+					 sort.c
 
-libutility_headers = \
-exceptions.h \
-utility.h
+libutility_headers = exceptions.h \
+					 utility.h
 
 library_includedir = $(includedir)/libutility/
 library_include_HEADERS = $(libutility_headers)
