Added functions for reference counted objects.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,7 +13,8 @@ libutility_sources = bytes.c \
 					 console.c \
 					 time.c \
 					 time-unix.c \
-					 sort.c
+					 sort.c \
+					 refobj.c
 
 libutility_headers = exceptions.h \
 					 utility.h
