Added console formatting functions.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,6 +4,7 @@ AM_CFLAGS = -std=c99 -g -ggdb -O0 -I$(top_builddir)/src/  -I/usr/local/include/l
 
 bin_PROGRAMS = \
 $(top_builddir)/bin/test-bytes \
+$(top_builddir)/bin/test-console \
 $(top_builddir)/bin/test-exceptions \
 $(top_builddir)/bin/test-scrambling \
 $(top_builddir)/bin/test-file \
@@ -14,6 +15,8 @@ $(top_builddir)/bin/test-base64
 
 __top_builddir__bin_test_bytes_SOURCES       = test-bytes.c
 __top_builddir__bin_test_bytes_LDFLAGS       = -lm $(top_builddir)/lib/.libs/libutility.a
+__top_builddir__bin_test_console_SOURCES     = test-console.c
+__top_builddir__bin_test_console_LDFLAGS     = -lm $(top_builddir)/lib/.libs/libutility.a
 __top_builddir__bin_test_exceptions_SOURCES  = test-exceptions.c
 __top_builddir__bin_test_exceptions_LDFLAGS  = -lm $(top_builddir)/lib/.libs/libutility.a
 __top_builddir__bin_test_scrambling_SOURCES  = test-scrambling.c
