Added pkg-config configuration for static linking.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS = src tests
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = utility.pc
+pkgconfig_DATA = utility.pc utility-static.pc
 
 Android.mk: Makefile.am
 	@androgenizer -:PROJECT libutility \
